[package]

name = "crtq"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.0.1"

readme = "README.md"
license = "Apache-2.0"

description = "A MPMC wait-free queue."

documentation = "https://kylemayes.github.io/crtq/crtq"
repository = "https://github.com/KyleMayes/crtq"

[dependencies]

hazard = "0.3.0"

clippy = { version = "0.0.*", optional = true }
