[package]

name = "crtq"
authors = ["Kyle Mayes <kyle@mayeses.com>"]

version = "0.0.1"

readme = "README.md"
license = "Apache-2.0"

description = "A MPMC wait-free queue."

documentation = "https://docs.rs/crtq"
repository = "https://github.com/KyleMayes/crtq"

[features]

valgrind = []

[dependencies]

hazard = "0.3.0"

clippy = { version = "0.0.*", optional = true }

[dev-dependencies]

queuecheck = "0.1.0"

[[test]]

name = "tests"
harness = false

[[bench]]

name = "benches"
harness = false
